[package]
name = "ethereum-address-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12.9" }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
bincode = "1.3.3"
dotenv = "0.15.0"
alloy = { version = "0.8.0", features = ["full"] }
indicatif = "0.17"